RESOLVED FIXED279691
[WebGPU] Destroy the device when encountering command buffer failures
https://bugs.webkit.org/show_bug.cgi?id=279691
Summary [WebGPU] Destroy the device when encountering command buffer failures
Mike Wyrzykowski
Reported 2024-09-13 12:58:19 PDT
[WebGPU] Destroy the device when encountering command buffer failures
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-13 12:58:35 PDT
Mike Wyrzykowski
Comment 2 2024-09-13 13:08:05 PDT
EWS
Comment 3 2024-09-17 16:10:22 PDT
Committed 283805@main (598d8ffd2b1d): <https://commits.webkit.org/283805@main> Reviewed commits have been landed. Closing PR #33636 and removing active labels.
EWS
Comment 4 2024-10-28 15:32:17 PDT
Committed 283286.356@safari-7620-branch (af5b3dd57f8e): <https://commits.webkit.org/283286.356@safari-7620-branch> Reviewed commits have been landed. Closing PR #2119 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.