[WebGPU] Destroy the device when encountering command buffer failures https://bugs.webkit.org/show_bug.cgi?id=279691 rdar://135972549

Reviewed by Ada Chan.

Mirror what WebGL does and drop the GPUDevice when the command
buffer encounters an error.

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::commitMTLCommandBuffer):

Canonical link: https://commits.webkit.org/283805@main